CHANGELOG
=========


1.5.3 (unreleased)
------------------

- Drop Plone 4.1 support. [jone]


1.5.2 (2016-10-03)
------------------

- Fix simple-upload: The check for allowed extensions will now be case-insensitive.
  [elioschmutz]


1.5.1 (2015-11-30)
------------------

- Include the Products.CMFCore package to be sure the cmf.ModifyPortalContent
  permission is loaded before used
  [elioschmutz]


1.5.0 (2015-09-21)
------------------

- Remove default workflows, since workflows should be done on integration level.
  The default workflow is now used for billboard types.
  [lknoepfel]


1.4.1 (2015-03-25)
------------------

- The Site Administrator has the same permissions as the Manager now.
  [mbaechtold]


1.4.0 (2015-02-09)
------------------

- Count only visible ads on category overview.
  [mathias.leimgruber]

- Improve prev. upgrade step by idexing only BillboardAds.
  [mathias.leimgruber]

- Added separate expiration date.
  [lknoepfel]


1.3.4 (2014-07-11)
------------------

- Fix validator translations.
  [mathias.leimgruber]


1.3.3 (2014-07-11)
------------------

- Updated translations.
  [tschanzt]


1.3.2 (2014-06-24)
------------------

- Show description on simple upload view (file, image)
  [mathias.leimgruber]


1.3.1 (2014-06-10)
------------------

- Hide upload-action for richtext fields.
  [mathias.leimgruber]


1.3.0 (2014-06-02)
------------------

- Update German translations.
  [jone]

- Removed broken image in ads view.
  [Julian Infanger]

- Implement billboard conditions.
  [mathias.leimgruber]

- Plone 4.3 compatibility.
  [mathias.leimgruber]


1.2.4 (2013-11-15)
------------------

- Fix close selector for overlay in billboardads.
  [Julian Infanger]

- Replace jq with $ in javascript file.
  [Julian Infanger]


1.2.3 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


1.2.2 (2013-03-04)
------------------

- Use lower email address in billboardad as default contact mail.