@@ -1,0 +1,26 @@
+<?xml version="1.0"?>
+<portlets xmlns:i18n="http://namespaces.zope.org/i18n"
+          i18n:domain="plone">
+    <portlet
+      addview="billboard.actions.portlet"
+      title="billboard actions portlet"
+      description="display add/edid/del actions" remove="True">
+    </portlet>
+    
+    <assignment 
+        name="billboard-actions"
+        category="content_type"
+        key="BillboardCategory"
+        manager="plone.rightcolumn"
+        type="ftw.billboard.portlets.actions"
+        remove="True"
+    />
+    <assignment
+        name="billboard-actions"
+        category="content_type"
+        key="BillboardAd"
+        manager="plone.rightcolumn"
+        type="ftw.billboard.portlets.actions"
+        remove="True"
+    />
+</portlets>
