@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<rolemap>
+  <permissions>
+    <permission name="ftw.billboard: Add BillboardAd" acquire="True">
+    </permission>
+    <permission name="ftw.billboard: Add BillboardCategory" acquire="True">
+    </permission>
+  </permissions>
+</rolemap>
