@@ -6,6 +6,7 @@ CHANGELOG
 ------------------
 
 - Drop Plone 4.1 support. [jone]
+- Add uninstall profile. [mathias.leimgruber]
 
 
 1.5.2 (2016-10-03)
